<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".activity.MainActivity">

    <!--<RelativeLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--android:layout_alignParentTop="true"-->
        <!--android:layout_alignParentLeft="true"-->
        <!--android:layout_alignParentStart="true">-->
        <!---->
    <!--</RelativeLayout>-->

    <TextView
        android:id="@+id/tv_history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        android:drawableStart="@mipmap/home_history"
        android:drawablePadding="10dp"
        android:gravity="center_vertical"
        android:text="@string/home_history_text"
        android:textColor="#333333" />

    <TextView
        android:id="@+id/tv_plan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="40dp"
        android:layout_marginStart="40dp"
        android:drawableStart="@mipmap/home_plan"
        android:drawablePadding="10dp"
        android:gravity="center_vertical"
        android:text="@string/home_plan_text"
        android:textColor="#333333"
        />

    <com.skdemo.skpedometer.view.SKStepCircleView
        android:id="@+id/StepCircleView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"/>

    <TextView
        android:id="@+id/tv_isSupport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/StepCircleView"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:text="@string/home_support_text"
        android:textColor="#333333" />

</RelativeLayout>