<?xml version="1.0" encoding="utf-8" ?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/layout_titleBar"
            android:background="@color/colorPrimary"
            android:layout_height="48dp"
            android:layout_width="match_parent"
            android:fitsSystemWindows="true"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_left"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@mipmap/arrow_back_white"
                android:onClick="onBackward"
                android:paddingLeft="18dp"
                android:paddingRight="18dp"
                android:visibility="visible"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="#00000000"
                android:gravity="center_horizontal"
                android:paddingLeft="10px"
                android:paddingRight="10px"
                android:text="@string/plan_title"
                android:textColor="#ffffff"
                android:textSize="20sp" />


            <ImageView
                android:id="@+id/iv_right"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_gravity="center"
                android:ellipsize="end"
                android:gravity="center"
                android:maxEms="4"
                android:maxWidth="80px"
                android:minEms="2"
                android:visibility="invisible"
                android:paddingLeft="40px"
                android:paddingRight="40px"
                android:singleLine="true"/>

        </LinearLayout>


    </FrameLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:src="@mipmap/sport" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:layout_marginTop="30px"
        android:background="#ffffff">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:text="@string/plan_step_title"
                android:textColor="#000000"
                android:textSize="18sp"/>

            <EditText
                android:id="@+id/edit_step"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical|right"
                android:background="#ffffff"
                android:text="7000"
                android:textColor="#000000"
                android:textSize="18sp"
                android:imeOptions="actionDone"/>

        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#999999"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/plan_remind"
                android:textColor="#000000"
                android:textSize="18sp"/>

            <CheckBox
                android:id="@+id/cb_remind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/cb_plan_selector"
                android:button="@null"
                android:checked="true"
                android:textColor="#000000"
                android:textSize="50px"/>

        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#999999"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/plan_remind_time"
                android:textColor="#000000"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/tv_remind_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="21:00"
                android:textColor="#000000"
                android:textSize="18sp"/>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:background="@mipmap/btn_submit_bg"
        android:text="保存"
        android:textColor="#ffffff"
        android:textSize="18dp"/>

</LinearLayout>